--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,38 @@ li {
   padding: 0;
 }
 
-.card {
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-
 .card:hover {
-  transform: scale(1.05);
+  transform: scale(1.01);
   box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1),
   -10px -10px 10px white;
+}
+
+.card {
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid #e0e0e0;
+  transition: transform 0.2s, box-shadow 0.2s;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* center content */
+  margin-top: 2rem;
+}
+
+.card-img-top {
+  border-radius: 10px;
+  width: 100%;
+  display: block; 
+  object-fit: cover; 
+}
+
+.card-body {
+  width: 100%;
+  box-sizing: border-box; 
+}
+
+.product-grid {
+  margin: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
 }
